--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --fix .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "serve"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.8",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "serve": "^11.3.1"
   },
   "husky": {
     "hooks": {
@@ -32,10 +34,10 @@
     }
   },
   "lint-staged": {
-    "./**/*": [
+    "./**/*.{html,css,json,md}": [
       "prettier --write"
     ],
-    "./**/*.{js}": [
+    "./**/*.js": [
       "eslint --fix"
     ]
   }
